feat(#98) 認証機能のAPIを追加
