# pkg/openapi/server.gen.go
@@ -20,6 +20,21 @@ type ServerInterface interface {
 	// 記事共有
 	// (POST /v1/articles)
 	V1ArticleShare(w http.ResponseWriter, r *http.Request)
+	// リフレッシュ
+	// (GET /v1/auth/refresh)
+	V1AuthRefresh(w http.ResponseWriter, r *http.Request, params V1AuthRefreshParams)
+	// サインイン
+	// (POST /v1/auth/signin)
+	V1AuthSignIn(w http.ResponseWriter, r *http.Request)
+	// サインアウト
+	// (GET /v1/auth/signout)
+	V1AuthSignOut(w http.ResponseWriter, r *http.Request)
+	// サインアップ
+	// (POST /v1/auth/signup)
+	V1AuthSignUp(w http.ResponseWriter, r *http.Request)
+	// 検証
+	// (GET /v1/auth/verify)
+	V1AuthVerify(w http.ResponseWriter, r *http.Request)
 	// apiヘルスチェック
 	// (GET /v1/health/api)
 	V1HealthAPI(w http.ResponseWriter, r *http.Request)
@@ -88,6 +103,136 @@ func (siw *ServerInterfaceWrapper) V1ArticleShare(w http.ResponseWriter, r *http
 
 	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		siw.Handler.V1ArticleShare(w, r)
+	})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// V1AuthRefresh operation middleware
+func (siw *ServerInterfaceWrapper) V1AuthRefresh(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var err error
+
+	ctx = context.WithValue(ctx, SessionTokenCookieScopes, []string{""})
+
+	// Parameter object where we will unmarshal all parameters from the context
+	var params V1AuthRefreshParams
+
+	// ------------- Required query parameter "code" -------------
+
+	if paramValue := r.URL.Query().Get("code"); paramValue != "" {
+
+	} else {
+		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "code"})
+		return
+	}
+
+	err = runtime.BindQueryParameter("form", true, true, "code", r.URL.Query(), &params.Code)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "code", Err: err})
+		return
+	}
+
+	// ------------- Required query parameter "signature" -------------
+
+	if paramValue := r.URL.Query().Get("signature"); paramValue != "" {
+
+	} else {
+		siw.ErrorHandlerFunc(w, r, &RequiredParamError{ParamName: "signature"})
+		return
+	}
+
+	err = runtime.BindQueryParameter("form", true, true, "signature", r.URL.Query(), &params.Signature)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "signature", Err: err})
+		return
+	}
+
+	// ------------- Optional query parameter "expiresIn" -------------
+
+	err = runtime.BindQueryParameter("form", true, false, "expiresIn", r.URL.Query(), &params.ExpiresIn)
+	if err != nil {
+		siw.ErrorHandlerFunc(w, r, &InvalidParamFormatError{ParamName: "expiresIn", Err: err})
+		return
+	}
+
+	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.V1AuthRefresh(w, r, params)
+	})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// V1AuthSignIn operation middleware
+func (siw *ServerInterfaceWrapper) V1AuthSignIn(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.V1AuthSignIn(w, r)
+	})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// V1AuthSignOut operation middleware
+func (siw *ServerInterfaceWrapper) V1AuthSignOut(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	ctx = context.WithValue(ctx, IdTokenCookieScopes, []string{""})
+
+	ctx = context.WithValue(ctx, SessionTokenCookieScopes, []string{""})
+
+	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.V1AuthSignOut(w, r)
+	})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// V1AuthSignUp operation middleware
+func (siw *ServerInterfaceWrapper) V1AuthSignUp(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	ctx = context.WithValue(ctx, ApiKeyScopes, []string{""})
+
+	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.V1AuthSignUp(w, r)
+	})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		handler = middleware(handler)
+	}
+
+	handler.ServeHTTP(w, r.WithContext(ctx))
+}
+
+// V1AuthVerify operation middleware
+func (siw *ServerInterfaceWrapper) V1AuthVerify(w http.ResponseWriter, r *http.Request) {
+	ctx := r.Context()
+
+	ctx = context.WithValue(ctx, IdTokenCookieScopes, []string{""})
+
+	ctx = context.WithValue(ctx, SessionTokenCookieScopes, []string{""})
+
+	var handler http.Handler = http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		siw.Handler.V1AuthVerify(w, r)
 	})
 
 	for _, middleware := range siw.HandlerMiddlewares {
@@ -245,6 +390,21 @@ func HandlerWithOptions(si ServerInterface, options ChiServerOptions) http.Handl
 	})
 	r.Group(func(r chi.Router) {
 		r.Post(options.BaseURL+"/v1/articles", wrapper.V1ArticleShare)
+	})
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/v1/auth/refresh", wrapper.V1AuthRefresh)
+	})
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/v1/auth/signin", wrapper.V1AuthSignIn)
+	})
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/v1/auth/signout", wrapper.V1AuthSignOut)
+	})
+	r.Group(func(r chi.Router) {
+		r.Post(options.BaseURL+"/v1/auth/signup", wrapper.V1AuthSignUp)
+	})
+	r.Group(func(r chi.Router) {
+		r.Get(options.BaseURL+"/v1/auth/verify", wrapper.V1AuthVerify)
 	})
 	r.Group(func(r chi.Router) {
 		r.Get(options.BaseURL+"/v1/health/api", wrapper.V1HealthAPI)
